fix: ln setup wording

--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/LNPaymentMethodSetupTab.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/LNPaymentMethodSetupTab.cshtml
@@ -27,10 +27,10 @@
             <div class="accordion-body">
                 <ul class="pb-2">
                     <li>
-                        <code><b>type=</b>blink;<b>server=</b>https://api.blink.sv/graphql;<b>api-key</b>=blink_...;<b>wallet-id=</b>xyz</code>
+                        <code><b>type=</b>boltz;<b>server=</b>https://127.0.0.1:9002;<b>macaroon</b>=hex-encoded-macaroon;<b>walletId=</b>wallet-id-for-lightning-payments</code>
                     </li>
                 </ul>
-                <p class="my-2">Head over to the <a href="https://dashboard.blink.sv" target="_blank" rel="noreferrer noopener">Boltz dashboard</a> and create an api key. The server is optional and will use the default Boltz instance.The wallet-id is optional and will use the default wallet otherwise.</p>
+                <p class="my-2">Connects to an instance of  <a href="https://github.com/BoltzExchange/boltz-client" target="_blank" rel="noreferrer noopener">Boltz Client</a>, using a liquid wallet to handle lightning payments using swaps.</p>
             </div>
         </div>
     </div>
