feat: wallets view

--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Wallet.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Wallet.cshtml
@@ -1,3 +1,4 @@
+@using BTCPayServer.Plugins.Boltz.Views
 @using Boltzrpc
 @using BTCPayServer.Abstractions.Models
 @using BTCPayServer.Abstractions.TagHelpers
@@ -13,6 +14,7 @@
     var storeId = Context.GetCurrentStoreId();
     var confirmModel = new ConfirmModel("Delete Wallet", "This action will remove the wallet. You will not be able to recover them if you don't have a backup.", "Delete");
     var isNodeWallet = Model.Wallet.Name == "CLN" || Model.Wallet.Name == "LND";
+    ViewData.SetActivePage(BoltzNavPages.Wallets, "Wallet");
 }
 
 <partial name="_Confirm" model="@confirmModel"/>
