--- a/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_WalletLink.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Shared/Boltz/_WalletLink.cshtml
@@ -11,6 +11,6 @@
         BTCPay
     </a>
 }
-<a asp-action="Wallet" asp-route-walletName="@Model" asp-route-storeId="@storeId">
+<a asp-action="Wallets" asp-route-walletName="@Model" asp-route-storeId="@storeId">
     @Model
 </a>
