--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/Wallet.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/Wallet.cshtml
@@ -12,11 +12,8 @@
 @inject BoltzService BoltzService
 @{
     var storeId = Context.GetCurrentStoreId();
-    var confirmModel = new ConfirmModel("Delete Wallet", "This action will remove the wallet. You will not be able to recover them if you don't have a backup.", "Delete");
     var isNodeWallet = Model.Wallet.Name == "CLN" || Model.Wallet.Name == "LND";
 }
-
-<partial name="_Confirm" model="@confirmModel"/>
 
 <div class="d-sm-flex align-items-center justify-content-between">
     <div>
@@ -43,19 +40,7 @@
                     {
                         <a asp-action="WalletCredentials" asp-route-walletId="@Model.Wallet.Id" asp-route-storeId="@storeId" class="dropdown-item">View seed</a>
                     }
-                    <form method="post" asp-action="Wallet" asp-route-walletId="@Model.Wallet.Id" asp-route-storeId="@storeId" class="d-inline">
-                        <div type="button"
-                             id="Delete"
-                             class="dropdown-item"
-                             data-bs-toggle="modal"
-                             data-bs-target="#ConfirmModal"
-                             data-title="Remove wallet"
-                             data-description="Remove this wallet"
-                             data-confirm="Remove"
-                             data-confirm-input="REMOVE">
-                            Remove wallet
-                        </div>
-                    </form>
+                    <a asp-action="WalletRemove" asp-route-walletId="@Model.Wallet.Id" asp-route-storeId="@storeId" class="dropdown-item">Remove</a>
                 </div>
             </div>
         }
