--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/WalletReceive.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/WalletReceive.cshtml
@@ -8,11 +8,7 @@
 
     var currency = Model.Wallet.Currency;
     var currencyName = BoltzClient.CurrencyName(currency);
-    var pair = new Pair
-    {
-        From = currency == Currency.Btc ? Currency.Lbtc : Currency.Btc,
-        To = currency
-    };
+    var chainPair = Model.ChainPair;
     ViewData["Title"] = $"Receive to {currencyName} Wallet";
 }
 
@@ -23,15 +19,6 @@
 }
 else
 {
-    var chainPair = new Pair
-    {
-        From = currency == Currency.Btc ? Currency.Lbtc : Currency.Btc,
-        To = currency
-    };
-    var chainInfo = (await BoltzService.GetPairInfo(chainPair, SwapType.Chain))!;
-    var lnPair = new Pair { From = Currency.Btc, To = currency };
-    var lnInfo = (await BoltzService.GetPairInfo(lnPair, SwapType.Reverse))!;
-
     ViewData["Description"] = $"Pick Lightning or {BoltzClient.CurrencyName(chainPair.From)} to swap into your {currencyName} wallet";
 
     @section PageFootContent {
@@ -43,8 +30,8 @@ else
             })
 
             const amount = $('#Amount')
-            const lnLimits = @Safe.Json(lnInfo.Limits)
-            const chainLimits = @Safe.Json(chainInfo.Limits)
+            const lnLimits = @Safe.Json(Model.LnInfo.Limits)
+            const chainLimits = @Safe.Json(Model.ChainInfo.Limits)
             const balance = @Safe.Json(Model.Wallet.Balance.Confirmed)
             let prev = "";
 
@@ -69,13 +56,13 @@ else
     <form method="post" class="mt-3">
         <div id="SendTypeTablist" class="nav btcpay-pills align-items-center justify-content-center mb-3" role="tablist">
             <input asp-for="SendType" value="@SendType.Native" type="radio" id="SendType-@SendType.Native" data-bs-toggle="pill" data-bs-target="#@SendType.Native" role="tab" aria-controls="InternalSetup" aria-selected="@(Model.SendType == SendType.Native ? "true" : "false")" class="@(Model.SendType == SendType.Native ? "active" : "")">
-            <label for="@($"SendType-{SendType.Native}")">@BoltzClient.CurrencyName(pair.To)</label>
+            <label for="@($"SendType-{SendType.Native}")">@BoltzClient.CurrencyName(chainPair.To)</label>
 
             <input asp-for="SendType" value="@SendType.Lightning" type="radio" id="SendType-@SendType.Lightning" data-bs-toggle="pill" data-bs-target="#@SendType.Lightning" role="tab" aria-controls="InternalSetup" aria-selected="@(Model.SendType == SendType.Lightning ? "true" : "false")" class="@(Model.SendType == SendType.Lightning ? "active" : "")">
             <label for="@($"SendType-{SendType.Lightning}")">Lightning</label>
 
             <input asp-for="SendType" value="@SendType.Chain" type="radio" id="SendType-@SendType.Chain" data-bs-toggle="pill" data-bs-target="#@SendType.Chain" role="tab" aria-controls="InternalSetup" aria-selected="@(Model.SendType == SendType.Chain ? "true" : "false")" class="@(Model.SendType == SendType.Chain ? "active" : "")">
-            <label for="@($"SendType-{SendType.Chain}")">@BoltzClient.CurrencyName(pair.From)</label>
+            <label for="@($"SendType-{SendType.Chain}")">@BoltzClient.CurrencyName(chainPair.From)</label>
         </div>
 
 
@@ -115,11 +102,11 @@ else
                 }
             </div>
             <div class="tab-pane" id="@SendType.Lightning" role="tabpanel">
-                <partial name="Boltz/_Stats" model="BoltzService.PairStats(lnInfo)"/>
+                <partial name="Boltz/_Stats" model="BoltzService.PairStats(Model.LnInfo)"/>
 
                 <div class="form-group mt-3">
                     <label asp-for="AmountLn" class="form-label">Amount (satoshi)</label>
-                    <input required min="@lnInfo.Limits.Minimal" max="@lnInfo.Limits.Maximal" asp-for="AmountLn" type="number" placeholder="How much to send" class="form-control"/>
+                    <input required min="@Model.LnInfo.Limits.Minimal" max="@Model.LnInfo.Limits.Maximal" asp-for="AmountLn" type="number" placeholder="How much to send" class="form-control"/>
                     <span asp-validation-for="AmountLn" class="text-danger"></span>
                 </div>
 
@@ -128,11 +115,11 @@ else
                 </button>
             </div>
             <div class="tab-pane" id="@SendType.Chain" role="tabpanel">
-                <partial name="Boltz/_Stats" model="BoltzService.PairStats(chainInfo)"/>
+                <partial name="Boltz/_Stats" model="BoltzService.PairStats(Model.ChainInfo)"/>
 
                 <div class="form-group mt-3">
                     <label asp-for="AmountChain" class="form-label">Amount (satoshi)</label>
-                    <input required min="@chainInfo.Limits.Minimal" max="@chainInfo.Limits.Maximal" asp-for="AmountChain" type="number" placeholder="How much to send" class="form-control"/>
+                    <input required min="@Model.ChainInfo.Limits.Minimal" max="@Model.ChainInfo.Limits.Maximal" asp-for="AmountChain" type="number" placeholder="How much to send" class="form-control"/>
                     <span asp-validation-for="AmountChain" class="text-danger"></span>
                 </div>
 
